// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render the display of button in the screen 1`] = `
<div
  className="main-page"
>
  <h1>
    Math Magicians
  </h1>
  <h2>
    Lets Do Some Math
  </h2>
  <div
    className="main"
  >
    <div
      className="min-calculator"
    >
      <div
        className="min-bar"
      >
        0
      </div>
      <div
        className="first row"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          AC
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          +/-
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          %
        </button>
        <button
          className="color"
          onClick={[Function]}
          type="button"
        >
          ÷
        </button>
      </div>
      <div
        className="2nd row"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          7
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          8
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          9
        </button>
        <button
          className="color"
          onClick={[Function]}
          type="button"
        >
          x
        </button>
      </div>
      <div
        className="3rd row"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          5
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          6
        </button>
        <button
          className="color"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
      </div>
      <div
        className="4th row"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="color"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
      <div
        className="5th row"
      >
        <button
          className="zero"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          .
        </button>
        <button
          className="color"
          onClick={[Function]}
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`It should render the value on the screen`] = `

<div
 className="main-page"
 >
      <h1
      >
      Math Magicians
      </h1>
      <h2
      >
      Lets Do Some Math
      </h2>
      <div
       className="main"
       >
        <div
         className="min-calculator"
         >
          <div 
          className="min-bar"
          >
            {total}
            {operation}
            {next}
          </div>
          <div
           className="first row"
           >
            <button
             type="button"
             onClick={handleClick}
             >
             AC
             </button>
            <button
            type="button"
            onClick={handleClick}
            >
            +/-
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            %
            </button>
            <button
            type="button"
            onClick={handleClick}
            className="color"
            >
            ÷
            </button>
          </div>
          <div
          className="2nd row"
          >
            <button
            type="button"
            onClick={handleClick}
            >
            7
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            8
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            9
            </button>
            <button
            type="button"
            onClick={handleClick}
            className="color"
            >
            x
            </button>
          </div>
          <div
          className="3rd row"
          >
               <button
            type="button"
            onClick={handleClick}
            >
            4
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            5
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            6
            </button>
            <button
            type="button"
            onClick={handleClick}
            className="color"
            >
            -
            </button>
          </div>
          <div
          className="4th row"
          >
               <button
            type="button"
            onClick={handleClick}
            >
            1
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            2
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            3
            </button>
            <button
            type="button"
            onClick={handleClick}
            className="color"
            >
            +
            </button>
          </div>
          <div
           className="5th row"
           >
            <button
             type="button"
              onClick={handleClick}
               className="zero"
               >
               0
               </button>
            <button
             type="button"
              onClick={handleClick}
              >
              .
              </button>
            <button
             type="button"
              onClick={handleClick}
               className="color"
               >
               =
               </button>
          </div>
        </div>
      </div>
</div>`;
